crates/atlas-runtime/tests/corpus/pass/optional_return_type.atlas
fn double(x: number) -> number { return x * 2; }
print(double(5));
