crates/atlas-runtime/tests/corpus/fail/type_errors/wrong_arg_type.atlas
fn add(borrow x: number, borrow y: number) -> number {
    return x + y;
}
let result: number = add("hello", 2);
